--- a/pong.css
+++ b/pong.css
@@ -1,3 +1,7 @@
+/*--------------------------------------*\
+|               generali                 |
+\*--------------------------------------*/
+
 html {
     height: 100%;
 }
@@ -10,13 +14,6 @@ body {
     justify-content: center;
 }
 
-p{
-    margin: 0;
-}
-
-#contavite {
-    display: inline-block;
-}
 
 main {
     margin-top: auto;
@@ -26,10 +23,21 @@ main {
     height: 43vw;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(180deg, rgba(0, 65, 25, 1) 28%, rgba(0, 65, 255, 1) 68%);
     border-radius: 3vw;
     font-family: "Candara",'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
+
+p{
+    margin: 0;
+}
+
+#contavite {
+    display: inline-block;
+}
+
+/*--------------------------------------*\
+|               playground               |
+\*--------------------------------------*/
 
 #playground {
     margin-left: auto;
@@ -40,18 +48,99 @@ main {
     height: 35vw;
     border: rgb(255, 38, 226) groove 1vw;
     border-radius: 1vw;
+    background-image: url("./immagini/sfondo.png");
+ 
 }
+
+#player {
+    box-shadow: 0.3vw 0.3vw black;
+    width: 8vw;
+    height: 1vw;
+    background: linear-gradient(180deg, rgba(255, 155, 60, 1) 28%, rgba(0, 65, 255, 1) 68%);
+    border-radius: 0.5vw;
+    position: absolute;
+    bottom: 4%;
+}
+
+
+.ball {
+    position: absolute;
+    width: 0.8vw;
+    height: 0.8vw;
+    background: radial-gradient(circle, rgba(223, 223, 223, 1) 16%, rgba(157, 157, 157, 1) 36%);
+    border-radius: 50%;
+}
+
+.proiettile {
+    width: 0.3vw;
+    height: 0.5vw;
+    background-color: yellow;
+    position: absolute;
+}
+
+
+/*--------------------------------------*\
+|                 login                  |
+\*--------------------------------------*/
 
 #login {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 15vw;
+    position: absolute;
+    text-align: center;
+    left: 25%;
+    top: 10vw;
+    font-family: "Candara";
+    color: white;
+    font-weight: bold;
+    font-size: 2vw;
+    text-transform: uppercase;
 }
+
+
+#login input{
+    margin:auto;
+    border:black inset 0.3vw;
+    border-radius: 5%;
+    position: relative;
+    height: 3vw;
+    width: 13vw;
+    top: -0.3vw;
+    text-align: center;
+    font-size: 1.5vw;
+}
+
+#login .inputErrato{
+    border:red inset 0.3vw;
+}
+
+#login p{
+    margin-top: 0.2vw;
+    margin-bottom: 0vw;
+    position: relative;
+    text-transform: none;
+    font-size: 0.8vw;
+}
+
+#logo{
+    width:18vw;
+    position: relative;
+    left: 6vw;
+    top: 0.7vw;
+}
+
+/*--------------------------------------*\
+|          barra informazioni            |
+\*--------------------------------------*/
 
 #barraInformazioni {
     height: 2.7vw;
     background-color: white;
-    width: 100%;
+    width: 95%;
+    margin-left:auto;
+    margin-right: auto;
     border-radius: 2vw;
     border-bottom: 0.5vw solid rgb(192, 212, 255);
     font-family: "Candara";
@@ -61,7 +150,7 @@ main {
 #barraInformazioni.selezionaLivello{
     text-align: center;
     font-size: 2vw;
-   
+    
 }
 
 #barraInformazioni.gioco {
@@ -84,31 +173,18 @@ main {
     float: left;
 }
 
+#highscore {
+    text-align: center;
+    font-size: 3em;
+}
+
 #divRecord{
     float: left;
     clear: left;
 }
 
-
-
-/* #punteggio, #x, #vite {
-    display: inline;
-    margin: 0;
-    text-align: center;
-    font-size: 2vw;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-} */
-
 #selLiv{
     text-align: center;
-}
-
-.ball {
-    position: absolute;
-    width: 0.8vw;
-    height: 0.8vw;
-    background: radial-gradient(circle, rgba(223, 223, 223, 1) 16%, rgba(157, 157, 157, 1) 36%);
-    border-radius: 50%;
 }
 
 #iconaBall {
@@ -117,16 +193,6 @@ main {
     height: 1.6vw;
     background: radial-gradient(circle, rgba(223, 223, 223, 1) 16%, rgba(157, 157, 157, 1) 36%);
     border-radius: 50%;
-}
-
-#player {
-    box-shadow: 0.3vw 0.3vw black;
-    width: 8vw;
-    height: 1vw;
-    background: linear-gradient(180deg, rgba(255, 155, 60, 1) 28%, rgba(0, 65, 255, 1) 68%);
-    border-radius: 0.5vw;
-    position: absolute;
-    bottom: 4%;
 }
 
 #iconaPlayer {
@@ -138,6 +204,9 @@ main {
     background-color: gray;
 }
 
+/*--------------------------------------*\
+|               blocchi                  |
+\*--------------------------------------*/
 
 .block {
     box-shadow: 0.2vw 0.2vw black;
@@ -146,7 +215,6 @@ main {
     border: 0.2vw solid black;
     border-radius: 10%;
     background-color: blue;
-    /*border: 2px inset blue;*/
     position: absolute;
     bottom: 5%;
 }
@@ -187,23 +255,11 @@ main {
     background-color: goldenrod;
 }
 
-#highscore {
-    text-align: center;
-    font-size: 3em;
-}
 
-#testoFinePartita {
-    text-align: center;
-    font-size: 5vw;
-    color: white;
-}
 
-.proiettile {
-    width: 0.3vw;
-    height: 0.5vw;
-    background-color: yellow;
-    position: absolute;
-}
+/*--------------------------------------*\
+|               power up                 |
+\*--------------------------------------*/
 
 .powerUP {
     width: 2vw;
@@ -231,6 +287,10 @@ main {
     background-color: gray;
 }
 
+/*--------------------------------------*\
+|              classifica                |
+\*--------------------------------------*/
+
 table {
     width: 100%;
     height: 100%;
@@ -249,6 +309,80 @@ img {
     font-size: 5vw;
 }
 
+table.classifica{
+    border-collapse: collapse;
+}
+
+td.classifica{
+    border: 0.4vw solid white;
+    color: white;
+    font-size: 2vw;
+    font-weight: bold;
+    text-shadow:0.2vw 0.2vw black;
+}
+
+td:nth-child(1).classifica{
+    width: 10%;
+}
+
+td:nth-child(2).classifica{
+    width: 50%;
+}
+
+p.classifica{
+    text-align: center;
+    font-size: 2.5vw;
+}
+
+div.classifica{
+    height: 80%;
+}
+
+.selezionaClassifica{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    color: white;
+    height:5%;
+}
+
+.classifica:visited{
+    color: white;
+    text-decoration: none;
+}
+
+a.classifica{
+    text-decoration: none;
+
+}
+
+#menu.classifica{
+    display: block;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 2.5vw;
+    text-decoration: none;
+}
+
+.menu{
+    color: white;
+}
+
+a.menu{
+    display: block;
+    text-align: center;
+    font-size: 4vw;
+    margin-top: 4vw;
+    text-decoration: none;
+    font-family: "Candara",'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
+    text-shadow:0.2vw 0.2vw black;
+}
+/*--------------------------------------*\
+|              fine partita              |
+\*--------------------------------------*/
+
 #risultato{
     display: flex;
     flex-direction: column;
@@ -266,5 +400,11 @@ img {
     text-align: center;
     color: white;
     font-size: 2vw;
+}
+
+#testoFinePartita {
+    text-align: center;
+    font-size: 5vw;
+    color: white;
 }
 
