--- a/arkanoid.css
+++ b/arkanoid.css
@@ -76,6 +76,16 @@ p{
     position: absolute;
 }
 
+#timer{
+    position: relative;
+    left: -4vw;
+    font-size: 2vw;
+    width: 3vw;
+}
+
+.timer{
+    display: inline;
+}
 
 /*--------------------------------------*\
 |                 login                  |
@@ -138,6 +148,7 @@ p{
 \*--------------------------------------*/
 
 #barraInformazioni {
+    position: relative;
     height: 2.7vw;
     background-color: white;
     width: 95%;
@@ -159,30 +170,47 @@ p{
     display: flex;
 }
 
-.vite{
-    position: relative;
+#vite{
+    position: absolute;
+    top: -0.7vw;
+    left: 3.9vw;
+    font-size: 3vw;
+}
+
+#viteTesto{
+    position: absolute;
+    top: -0.7vw;
+    left: 2.5vw;
     font-size: 3vw;
 }
 
 #contaVite {
-    position: relative;
-    left: 2.5vw;
-    bottom: 0.7vw;
     width: 50%;    
 }
 
 #divPunteggio{
     float: left;
+    font-size: 1.3vw;
 }
 
-#highscore {
+#punteggio{
+    position: relative;
+    top: -1.6vw;
+    left: 7vw;
+}
+
+#record {
+    position: absolute;
+    top: 0vw;
+    left: 5.2vw;
     text-align: center;
-    font-size: 3em;
+    font-size: 1.3vw;
 }
 
 #divRecord{
-    float: left;
-    clear: left;
+    position: absolute;
+    top: 1.4vw;
+    font-size: 1.3vw;
 }
 
 #selLiv{
@@ -190,10 +218,12 @@ p{
 }
 
 #iconaBall {
-    display: inline-block;
+    display: block;
+    position: absolute;
+    top: 0.6vw;
+    left: 1vw;
     width: 1.6vw;
     height: 1.6vw;
-    background: radial-gradient(circle, rgba(223, 223, 223, 1) 16%, rgba(157, 157, 157, 1) 36%);
     border-radius: 50%;
 }
 
@@ -309,7 +339,6 @@ img.skin.selezionata{
 img.skin.bloccata{
     border: 0.5vw solid black;
 }
-
 /*--------------------------------------*\
 |               livelli                  |
 \*--------------------------------------*/
@@ -325,6 +354,9 @@ img.livello.bloccato{
     border: 0.5vw black solid;
 }
 
+td.livello{
+    width: 2vw;
+}
 /*--------------------------------------*\
 |              classifica                |
 \*--------------------------------------*/
@@ -411,7 +443,7 @@ a.menu{
     display: block;
     text-align: center;
     font-size: 2vw;
-    margin-top: 4vw;
+    margin-top: 3vw;
     text-decoration: none;
     font-family: "Candara",'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-transform: uppercase;
@@ -445,17 +477,16 @@ a.menu{
     color: white;
 }
 
-#timer{
+/*--------------------------------------*\
+|              Istruzioni                |
+\*--------------------------------------*/
+
+div.istruzioni{
     position: relative;
-    left: -4vw;
-    font-size: 2vw;
-    width: 3vw;
-}
-
-.timer{
-    display: inline;
-}
-
-.skinSelected{
-    border: red 2px solid;
+    top: 1vw;
+    text-align: center;
+    color: white;
+    text-shadow: 0.2vw 0.2vw black;
+    font-family: "Candara",'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
 }
